# hal_ros_control

./: .clang-format  .clang-tidy  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.build-docs.sh  .travis.setup-docker-image.sh  .travis.yml  HALROSControl.config  HALROSControl.files  HALROSControl.includes  LICENSE  README.md
.github/: .gitignore  debian-distro-settings.yaml  local-env-sample.yaml
.github/docker/: configure_source.sh  script_pre.sh
.github/workflows/: catkin_tools_devel.sh  ci.yaml  docker.yaml  format.yaml  prerelease.yaml  upstream.rosinstall  upstream_install.sh
hal_hw_interface/: CMakeLists.txt  hal_hw_interface.xml  package.xml  rosdoc.yaml  setup.py
hal_hw_interface/cmake/: FindHAL.cmake  UseHALComp.cmake  hal_hw_interface-extras.cmake  hal_hw_interface-extras.cmake.develspace.in  hal_hw_interface-extras.cmake.installspace.in
hal_hw_interface/config/: fastrtps_disable_shm.xml  hal_hw_interface.yaml.in
hal_hw_interface/doc/: .gitignore  Makefile  README.md  conf.py  index.rst  mainpage.dox  mainpage.md
hal_hw_interface/hal_hw_interface/: __init__.py  exception.py  hal_io_comp.py  hal_mgr.py  hal_obj_base.py  hal_pin_attrs.py  loadrt_local.py  redis_store_hal_pin.py  ros_hal_component.py  ros_hal_pin.py
hal_hw_interface/hal_hw_interface/launch/: __init__.py  hal_config.py  hal_files.py  hal_mgr.py  hal_ordered_action.py  hal_ready.py  hal_rt_node.py  hal_user_node.py
hal_hw_interface/hal_hw_interface/tests/: conftest.py  hal_io.conf.yaml  test_fixtures.py  test_hal_io_comp.py  test_hal_obj_base.py  test_hal_pin_attrs.py  test_redis_store_hal_pin.py  test_ros_hal_component.py  test_ros_hal_pin.py
hal_hw_interface/include/hal_hw_interface/: hal_control_loop.h  hal_def.hpp  hal_handle.hpp  hal_hw_interface.h  hal_ros_logging.h  hal_ros_logging.hpp  hal_system_interface.hpp  visibility_control.h
hal_hw_interface/launch/: hal_hw_interface.in.launch  hal_hw_interface.launch  hal_hw_interface.launch.py
hal_hw_interface/scripts/: hal_io  hal_mgr  hal_offset_mgr
hal_hw_interface/src/: hal_control_loop.cpp  hal_control_node.cpp  hal_hw_interface.cpp  hal_io  hal_mgr.py  hal_system_interface.cpp
hal_hw_interface/src/hal_hw_interface/: __init__.py  hal_io_comp.py  hal_mgr.py  hal_obj_base.py  hal_offset_mgr.py  hal_pin_attrs.py  loadrt_local.py  redis_store_hal_pin.py  ros_hal_component.py  ros_hal_pin.py
hal_hw_interface/src/hal_hw_interface/tests/: conftest.py  test_fixtures.py  test_hal_io_comp.py  test_hal_obj_base.py  test_hal_offset_mgr.py  test_hal_pin_attrs.py  test_redis_store_hal_pin.py  test_ros_hal_component.py  test_ros_hal_pin.py
hal_hw_interface/srv/: SetUInt32.srv
hal_hw_interface/tests/: tests.launch
hal_hw_interface_msgs/: CMakeLists.txt  README.md  package.xml
hal_hw_interface_msgs/srv/: SetFloat64.srv
hal_rrbot_control/: CMakeLists.txt  package.xml
hal_rrbot_control/config/: hal_hw_interface.halscope  hal_hw_interface.yaml  hal_io.halscope  hal_io.yaml  rrbot_controllers.yaml
hal_rrbot_control/halfiles/: hal_gripper.hal  hal_hw_interface.hal  hal_io.hal  post.hal  pre.hal  rrbot.hal  start_threads.hal
hal_rrbot_control/launch/: hal_io_demo.launch  hal_rrbot_simulation.launch  rrbot.launch.py  rrbot_test_trajectory.launch  rrbot_visualize.launch
hal_rrbot_control/urdf/: hal_rrbot.xacro  hal_rrbot_gripper.xacro
interruptible_joint_trajectory_controller/: CMakeLists.txt  README.md  mainpage.dox  moveit_ros_control_interface_plugins.xml  package.xml  ros_control_plugins.xml
interruptible_joint_trajectory_controller/include/interruptible_joint_trajectory_controller/: interruptible_joint_trajectory_controller.h
interruptible_joint_trajectory_controller/src/: interruptible_joint_trajectory_controller.cpp
interruptible_joint_trajectory_controller/test/: joint_trajectory_controller_test.cpp  rrbot_controllers.yaml  rrbot_controllers_stopramp.yaml  rrbot_partial_controllers.yaml  rrbot_vel_controllers.yaml  rrbot_wrapping_controllers.yaml
machinekit_interfaces/: CMakeLists.txt  package.xml
machinekit_interfaces/include/machinekit_interfaces/: joint_event_interface.h  probe_interface.h  realtime_event_interface.h
stop_event_msgs/: CMakeLists.txt  package.xml
stop_event_msgs/msg/: StopEventResult.msg
stop_event_msgs/srv/: GetProbeResult.srv  GetStopEventResult.srv  SetNextProbeMove.srv
