<?xml version="1.0"?>
<package>
  <name>hal_hw_interface</name>
  <version>0.0.0</version>
  <description>
    Machinekit HAL interface to robot hardware and I/O
  </description>

  <maintainer email="john@zultron.com">John Morris</maintainer>

  <license>BSD</license>

  <author email="john@zultron.com">John Morris</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>ros_control_boilerplate</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python3-attrs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>
  <build_depend>redis_store</build_depend>
  <build_depend>machinekit-dev</build_depend>
  <build_depend>machinekit_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>stop_event_msgs</build_depend>

  <run_depend>ros_control_boilerplate</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python3-attrs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>redis_store</run_depend>
  <run_depend>rosbash</run_depend>
  <run_depend>machinekit</run_depend>
  <run_depend>machinekit_interfaces</run_depend>
  <run_depend>stop_event_msgs</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>ros_pytest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
