<?xml version="1.0"?>
<package format="2">
  <name>hal_hw_interface</name>
  <version>0.0.0</version>
  <description>
    Machinekit HAL interface to robot hardware and I/O
  </description>

  <maintainer email="john@zultron.com">John Morris</maintainer>

  <license>BSD</license>

  <author email="john@zultron.com">John Morris</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_control_boilerplate</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python3-attrs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>
  <build_depend>redis_store</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>machinekit-dev</build_depend>

  <!-- Packages building HAL comps need machinekit-dev -->
  <build_export_depend>machinekit-dev</build_export_depend>

  <exec_depend>ros_control_boilerplate</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-attrs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>redis_store</exec_depend>
  <exec_depend>rosbash</exec_depend>
  <exec_depend>machinekit</exec_depend>

  <test_depend>ros_pytest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
