<?xml version="1.0"?>
<package format="3">
  <name>hal_hw_interface</name>
  <version>0.1.0</version>
  <description>
    Machinekit HAL interface to robot hardware and I/O
  </description>

  <maintainer email="john@zultron.com">John Morris</maintainer>

  <license>BSD</license>

  <author email="john@zultron.com">John Morris</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>rclcpp</depend>

  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_depend>std_srvs</build_depend> -->
  <build_depend>machinekit-dev</build_depend>

  <!-- <build_export_depend>rclpy</build_export_depend> -->
  <build_export_depend>machinekit-dev</build_export_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-attrs-pip</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>hal_hw_interface_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>machinekit</exec_depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-mock</test_depend>

  <!-- FIXME Temporary until added to pluginlib (used by
       controller_manager)
       https://github.com/ros/pluginlib/pull/222 -->
  <depend>libboost-thread</depend>
  <build_depend>libboost-thread-dev</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
