<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hal_hw_interface_msgs</name>
  <version>0.0.1</version>
  <description>rosidl definitions for the hal_hw_interface package</description>
  <license>Apache License 2.0</license>

  <maintainer email="john@zultron.com">John Morris</maintainer>
  <author email="john@zultron.com">John Morris</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>rosidl_adapter</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
