<?xml version="1.0"?>
<package format="3">
  <name>hal_rrbot_control</name>
  <version>0.1.0</version>
  <description>Example usage of the hal_hw_interface package</description>

  <maintainer email="john@zultron.com">John Morris</maintainer>

  <license>BSD</license>

  <author email="john@zultron.com">John Morris</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hal_hw_interface</depend>
  <depend>ros2_control_demo_example_1</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
