<package format="2">
  <name>interruptible_joint_trajectory_controller</name>
  <description> Controller for executing joint-space trajectories on a group of joints, that is interruptible in real-time based on probe feedback.</description>
  <version>0.18.0</version>

  <maintainer email="rellenberg@tormach.com">Robert W. Ellenberg</maintainer>

  <license>BSD</license>

  <!--
      TODO
      <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
      <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
      <url type="repository">https://github.com/ros-controls/ros_controllers</url>
  -->

  <author>Robert W. Ellenberg</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>actionlib</depend>
  <depend>angles</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>
  <depend>pluginlib</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>stop_event_msgs</depend>
  <depend>machinekit_interfaces</depend>
  <depend>moveit_ros_control_interface</depend>

  <test_depend>rostest</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>code_coverage</test_depend>

  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
    <moveit_ros_control_interface
        plugin="${prefix}/moveit_ros_control_interface_plugins.xml"/>
  </export>
</package>
