<?xml version="1.0"?>
<package format="2">
    <name>stop_event_msgs</name>
    <version>0.0.1</version>
    <description>Defines messages for stop events triggered from the realtime side of the robot control loop.</description>

    <maintainer email="rellenberg@tormach.com">rellenberg</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>trajectory_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <architecture_independent/>
    </export>
</package>
